@@ -1,5 +1,6 @@
 package ai.mr.container;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
@@ -50,12 +51,12 @@ public class ExecutorsContainer {
 	public void registMapperExecutor(String mapperName, Map<String, ?> parameters) {
 		try {
 			// 通过mapper类的名称获得mapper类的一个实例
-			IMapper mapper = (IMapper) Class.forName(mapperName).newInstance();
+			IMapper mapper = (IMapper) Class.forName(mapperName).getDeclaredConstructor().newInstance();
 			// 将mapper的data属性注入进去，将该类对应的查询参数Map集合注入进去
 			mapper.setParameters(parameters);
 			// 将mapper名称和对应的mapper类放到新map集合里
 			mappersGroup.put(mapperName + Math.random() + System.currentTimeMillis(), mapper);// 将mapper名称和对应的mapper类放到新map集合里
-		} catch (InstantiationException e) {
+		} catch (InstantiationException | NoSuchMethodException | InvocationTargetException e) {
 			e.printStackTrace();
 		} catch (IllegalAccessException e) {
 			e.printStackTrace();
